--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
   </style>
 </head>
 <body>
-  <h1>Analyse-Tool – Vorschau als Text und HTML 008</h1>
+  <h1>Analyse-Tool – Vorschau als Text und HTML</h1>
 
   <label for="beitragstitel">Beitragstitel:</label>
-  <input type="text" id="beitragstitel" value= placeholder="Beitragstitel eingeben" />
+  <input type="text" id="beitragstitel" placeholder="Beitragstitel eingeben" />
 
   <label for="slugId">Slug-ID:</label>
-  <input type="text" id="slugId leer="true">[slug-id wird nach Analyse ergänzt]</slug-id> />
+  <input type="text" id="slugId" placeholder="[slug-id wird nach Analyse ergänzt]" />
 
   <label for="ressort">Ressort:</label>
   <select id="ressort">
@@ -44,7 +44,7 @@
   </select>
 
   <label for="tags">Tags:</label>
-  <input type="text" id="tags" value=placeholder="Bitte wertvolle Tags kommagetrennt eingeben, die Gewichtung in der Analyse bekommen sollen" />
+  <input type="text" id="tags" placeholder="Bitte wertvolle Tags kommagetrennt eingeben, die Gewichtung in der Analyse bekommen sollen" />
 
   <div class="analyse-block">
     <h2>Transkript</h2>
@@ -52,7 +52,7 @@
     <textarea id="transkript" placeholder="Transkript eingeben..."></textarea>
     <label>Zitate erlaubt?</label>
     <select id="zitateTranskript">
-      <option value="true" >Ja</option>
+      <option value="true">Ja</option>
       <option value="false" selected>Nein</option>
     </select>
     <label>Gewichtung:</label>
@@ -71,7 +71,7 @@
     <textarea id="anmoderation" placeholder="Anmoderation eingeben..."></textarea>
     <label>Zitate erlaubt?</label>
     <select id="zitateAnmoderation">
-      <option value="true" >Ja</option>
+      <option value="true">Ja</option>
       <option value="false" selected>Nein</option>
     </select>
     <label>Gewichtung:</label>
@@ -94,16 +94,15 @@
 
   <script>
     function escapeXml(str) {
-      return str.replace(/&/g, "&amp;").replace(/</g, "&lt;")
-                .replace(/>/g, "&gt;").replace(/"/g, "&quot;")
+      return str.replace(/&/g, "&amp;")
+                .replace(/</g, "&lt;")
+                .replace(/>/g, "&gt;")
+                .replace(/\"/g, "&quot;")
                 .replace(/'/g, "&apos;");
     }
 
     function generateFinalXML() {
-      const now = new Date();
-      const timestamp = now.toLocaleDateString("de-DE") + ", " + now.toLocaleTimeString("de-DE");
-      const isoTime = now.toISOString();
-
+      const isoTime = new Date().toISOString();
       const titel = escapeXml(document.getElementById("beitragstitel").value);
       const slug = escapeXml(document.getElementById("slugId").value);
       const ressort = escapeXml(document.getElementById("ressort").value);
@@ -114,48 +113,11 @@
       const anmoderation = escapeXml(document.getElementById("anmoderation").value);
       const zitatA = document.getElementById("zitateAnmoderation").value;
       const weightA = document.getElementById("weightAnmoderation").value;
-      
-      const klartextVorschau = `
-Finale redaktionelle Online-Ausgabe
 
-Überschrift (max. 60 Zeichen):
-
-Kurzbeschreibung (max. 150 Zeichen):
-
-SEO-Keywords (max. 10):
-
-SEO-Themen (max. 5):
-
-`;
-
-    const htmlVorschau = `
-<div class="online-ausgabe-vorschau">
-  <h2></h2>
-  <p><strong>Kurzbeschreibung:</strong></p>
-  <div class="seo">
-    <h3>SEO-Keywords</h3>
-    <ul>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-    </ul>
-    <h3>SEO-Themen</h3>
-    <ul>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li>g</li>
-    </ul>
-  </div>
-</div>`
+      if (!transcript && !anmoderation) {
+        alert("Eine Textquelle ist mindestens erforderlich für eine Analyse");
+        return;
+      }
 
       const xml = `<?xml version="1.0" encoding="UTF-8"?>
 <online-ausgabe version="1.0">
@@ -179,18 +141,18 @@ SEO-Themen (max. 5):
       <aufgabe>
         <ziel>Erstellung redaktioneller Online-Elemente</ziel>
         <elemente>
-          <ueberschrift> 
-            <max-laenge>60</laenge>
+          <ueberschrift>
+            <max-laenge>60</max-laenge>
             <stil>aktive Sprache, keine Füllwörter</stil>
           </ueberschrift>
           <kurzbeschreibung>
-            <max-laenge>150</laenge>
-            <stil>klarer Hauptsatz, Nebensätze möglichst vermeiden, Doppelpunkte sind erlaubt für Ausführungen oder Zusammenfassungen, Gedankenstriche sind erlaubt um um den Kontext zu erläutern oder um Informationen zu verdichten.</stil>
+            <max-laenge>150</max-laenge>
+            <stil>klarer Hauptsatz, möglichst ohne Nebensätze, Doppelpunkte und Gedankenstriche erlaubt</stil>
           </kurzbeschreibung>
           <keywords>
             <max-anzahl>10</max-anzahl>
             <stil>Haupt- und Nebenkeywords, thematisch breit, seo-relevant</stil>
-          </keywords/>
+          </keywords>
           <themen>
             <max-anzahl>5</max-anzahl>
             <stil>übergeordnete thematische Kategorien, seo-relevant</stil>
@@ -261,8 +223,19 @@ SEO-Themen (max. 5):
     </seo>
   </editorial-metadata>
   <vorschau>
-    <text><![CDATA[${klartextVorschau}]]></text>
-    <html><![CDATA[${htmlVorschau}]]></html>
+    <text>Finale redaktionelle Online-Ausgabe\n\nÜberschrift (max. 60 Zeichen):\n\nKurzbeschreibung (max. 150 Zeichen):\n\nSEO-Keywords (max. 10):\n\nSEO-Themen (max. 5):\n</text>
+    <html>
+      <div class="online-ausgabe-vorschau">
+        <h2></h2>
+        <p><strong>Kurzbeschreibung:</strong></p>
+        <div class="seo">
+          <h3>SEO-Keywords</h3>
+          <ul><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li></ul>
+          <h3>SEO-Themen</h3>
+          <ul><li></li><li></li><li></li><li></li><li></li></ul>
+        </div>
+      </div>
+    </html>
   </vorschau>
 </online-ausgabe>`;
 
@@ -270,9 +243,7 @@ SEO-Themen (max. 5):
     }
 
     function copyToClipboard() {
-      const output = document.getElementById("finalXml");
-      output.select();
-      document.execCommand("copy");
+      navigator.clipboard.writeText(document.getElementById("finalXml").value);
     }
 
     function downloadXML() {
