--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </style>
 </head>
 <body>
-  <h1>Analyse-Tool – Vorschau als Text 001</h1>
+  <h1>Analyse-Tool – Vorschau als Text 002</h1>
 
   <label for="beitragstitel">Beitragstitel:</label>
   <input type="text" id="beitragstitel" placeholder="Beitragstitel eingeben" />
@@ -174,7 +174,8 @@
       <hinweis>Keine Rückfragen stellen.</hinweis>
       <hinweis>Überschreibe leere Felder direkt im XML.</hinweis>
       <hinweis>Fülle den Vorschau-Text vollständig aus.</hinweis>
-      <hinweis>Die Ausgabe erfolgt am Ende als reine Textdarstellung der redaktionellen Inhalte sowie als vollständig aktualisierter XML-Block.</hinweis>
+      <hinweis>Die Ausgabe erfolgt am Ende als reine Textdarstellung der redaktionellen Inhalte.</hinweis>
+      <hinweis>Biete die zusätzliche Ausgabe als vollständig aktualisierter XML-Block zum Download nur nach positiver Antwort auf eine Nachfrage durch dich am Ende der Textdarstellung an.
     </hinweise>
   </anweisung-fuer-ki>
 
