--- a/index.html
+++ b/index.html
@@ -2,20 +2,21 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8" />
-  <title>Analyse-Tool mit Klartext-Vorschau</title>
+  <title>Analyse-Tool mit KI-PromptChain</title>
   <style>
     body { font-family: Arial, sans-serif; max-width: 960px; margin: auto; padding: 20px; }
     textarea, select, input[type="text"] {
       width: 100%; margin-top: 5px; padding: 6px; font-family: monospace;
     }
-    textarea { height: 160px; }
+    textarea { height: 180px; }
     .analyse-block { margin-bottom: 30px; border-top: 1px solid #ccc; padding-top: 20px; }
     .button-group { margin-top: 10px; display: flex; gap: 10px; flex-wrap: wrap; }
     h2 { margin-top: 40px; }
+    .xml-box, .html-preview { background: #f8f8f8; border: 1px solid #ccc; padding: 15px; white-space: pre-wrap; margin-top: 15px; font-family: monospace; }
   </style>
 </head>
 <body>
-  <h1>Analyse-Tool – Vorschau als Text 002</h1>
+  <h1>Analyse-Tool – XML mit PromptChain & Vorschau</h1>
 
   <label for="beitragstitel">Beitragstitel:</label>
   <input type="text" id="beitragstitel" placeholder="Beitragstitel eingeben" />
@@ -41,7 +42,7 @@
   </select>
 
   <label for="tags">Tags:</label>
-  <input type="text" id="tags" placeholder="Bitte wertvolle Tags kommagetrennt eingeben, die Gewichtung in der Analyse bekommen sollen" />
+  <input type="text" id="tags" placeholder="Kommagetrennte Tags eingeben" />
 
   <div class="analyse-block">
     <h2>Transkript</h2>
@@ -81,12 +82,21 @@
     </select>
   </div>
 
-  <h2>Finale XML-Ausgabe</h2>
-  <textarea id="finalXml" placeholder="Hier erscheint das finale XML..."></textarea>
   <div class="button-group">
-    <button onclick="copyToClipboard()">Kopieren</button>
-    <button onclick="downloadXML()">Herunterladen</button>
-    <button onclick="generateFinalXML()">Finales XML erstellen</button>
+    <button onclick="generateFinalXML()">Finales XML erzeugen</button>
+    <button onclick="copyToClipboard()">XML kopieren</button>
+    <button onclick="downloadXML()">XML herunterladen</button>
+  </div>
+
+  <h2>XML zum Kopieren</h2>
+  <div id="finalXml" class="xml-box"></div>
+
+  <h2>Klartext-Vorschau (für Redaktion)</h2>
+  <div class="html-preview">
+    <strong>Überschrift:</strong> <em>[Wird von KI erzeugt]</em><br>
+    <strong>Kurzbeschreibung:</strong> <em>[Wird von KI erzeugt]</em><br>
+    <strong>Keywords:</strong> <ul><li>…</li></ul>
+    <strong>Themen:</strong> <ul><li>…</li></ul>
   </div>
 
   <script>
@@ -110,84 +120,30 @@
       const zitatA = document.getElementById("zitateAnmoderation").value;
       const weightA = document.getElementById("weightAnmoderation").value;
 
-      if (!transcript && !anmoderation) {
-        alert("Eine Textquelle ist mindestens erforderlich für eine Analyse");
-        return;
-      }
-
       const xml = `<?xml version="1.0" encoding="UTF-8"?>
 <online-ausgabe version="1.0">
   <verarbeitung automatisch="true" />
-  <ausgabe-format>nur-redaktionelle-inhalte</ausgabe-format>
+  <verarbeitungskette>
+    <schritt nummer="1" typ="analyse">Transkript und Anmoderation analysieren</schritt>
+    <schritt nummer="2" typ="struktur">Analysefelder (2–6) befüllen</schritt>
+    <schritt nummer="3" typ="redaktion">Online-Elemente erzeugen</schritt>
+    <schritt nummer="4" typ="vorschau">Klartext- und HTML-Vorschau erstellen</schritt>
+  </verarbeitungskette>
   <anweisung-fuer-ki>
-     <beschreibung>
-      Verarbeite dieses XML sofort nach dem Einlesen. Lies alle &lt;originaltext&gt;-Felder, analysiere sie gemäß den &lt;aufgaben&gt;, fülle alle &lt;analyse&gt;-Felder sowie alle redaktionellen Felder in &lt;editorial-metadata&gt; automatisch aus. Erstelle zusätzlich eine strukturierte Vorschau in &lt;vorschau&gt;&lt;text&gt;. Gib alle Ergebnisse vollständig aus, ohne Rückfragen, Kommentare oder Hinweise. Die Ausgabe erfolgt ausschließlich als redaktioneller Inhalt.
-    </beschreibung>
-    <ausfuehrung>jetzt-analyse-starten</ausfuehrung>
-    <aufgaben>
-      <aufgabe>
-        <ziel>Analyse der Inhalte</ziel>
-        <schritte>
-          <schritt nummer="2">Zentrale Fakten herausfiltern</schritt>
-          <schritt nummer="3">Zentrales Thema formulieren</schritt>
-          <schritt nummer="4">Informative Absicht erkennen</schritt>
-          <schritt nummer="5">Beteiligte Personen benennen</schritt>
-          <schritt nummer="6">Prognose erstellen</schritt>
-        </schritte>
-        <gilt-fuer>
-          <quelle>Transkript</quelle>
-          <quelle>Anmoderation</quelle>
-        </gilt-fuer>
-      </aufgabe>
-      <aufgabe>
-        <ziel>Erstellung redaktioneller Online-Elemente</ziel>
-        <elemente>
-          <ueberschrift>
-            <max-laenge>60</max-laenge>
-            <stil>aktive Sprache, keine Füllwörter</stil>
-          </ueberschrift>
-          <kurzbeschreibung>
-            <max-laenge>150</max-laenge>
-            <stil>klarer Hauptsatz, Nebensätze möglichst vermeiden, Doppelpunkte sind erlaubt für Ausführungen oder Zusammenfassungen, Gedankenstriche sind erlaubt um um den Kontext zu erläutern oder um Informationen zu verdichten</stil>
-          </kurzbeschreibung>
-          <keywords>
-            <max-anzahl>10</max-anzahl>
-            <stil>Haupt- und Nebenkeywords, thematisch breit, seo-relevant</stil>
-          </keywords>
-          <themen>
-            <max-anzahl>5</max-anzahl>
-            <stil>übergeordnete thematische Kategorien, seo-relevant</stil>
-          </themen>
-        </elemente>
-      </aufgabe>
-      <aufgabe>
-        <ziel>Vorschauausgabe</ziel>
-        <formate>
-          <format typ="text">Mit Zwischenüberschriften</format>
-        </formate>
-      </aufgabe>
-    </aufgaben>
-    <hinweise>
-      <hinweis>Starte die Verarbeitung sofort und vollständig.</hinweis>
-      <hinweis>Gib ausschließlich redaktionelle Inhalte in der Ausgabe zurück – keine Erläuterungen oder Kommentare.</hinweis>
-      <hinweis>Verwende keine CDATA.</hinweis>
-      <hinweis>Keine Rückfragen stellen.</hinweis>
-      <hinweis>Überschreibe leere Felder direkt im XML.</hinweis>
-      <hinweis>Fülle den Vorschau-Text vollständig aus.</hinweis>
-      <hinweis>Die Ausgabe erfolgt am Ende als reine Textdarstellung der redaktionellen Inhalte.</hinweis>
-      <hinweis>Biete die zusätzliche Ausgabe als vollständig aktualisierter XML-Block zum Download nur nach positiver Antwort auf eine Nachfrage durch dich am Ende der Textdarstellung an.
-    </hinweise>
+    <beschreibung>Führe alle Verarbeitungsschritte nacheinander aus und fülle die XML-Struktur vollständig mit redaktionellen Ergebnissen. Keine Rückfragen. Keine Kommentare. Keine CDATA. Direkte Ausgabe.</beschreibung>
+    <ablauf>
+      <schritt>1. Inhalte analysieren</schritt>
+      <schritt>2. Strukturierte Auswertung</schritt>
+      <schritt>3. Redaktionelle Textbausteine erzeugen</schritt>
+      <schritt>4. Vorschau generieren (Text & HTML)</schritt>
+    </ablauf>
+    <abschluss>Ausgabe in allen Formaten: Klartext, HTML-Vorschau, XML-Struktur.</abschluss>
   </anweisung-fuer-ki>
-
   <quelle>
-    <id>beitrag</id>
     <zeitstempel>${isoTime}</zeitstempel>
-    <art>TV-Beitrag</art>
     <titel>${titel}</titel>
-    <themenvorgabe>
-      <ressort>${ressort}</ressort>
-      <tags>${tags}</tags>
-    </themenvorgabe>
+    <ressort>${ressort}</ressort>
+    <tags>${tags}</tags>
     <analysearten>
       <transkript gewichtung="${weightT}">
         <zitate-erlaubt>${zitatT}</zitate-erlaubt>
@@ -213,8 +169,7 @@
       </anmoderation>
     </analysearten>
   </quelle>
-
-    <editorial-metadata>
+  <editorial-metadata>
     <ueberschrift länge-max="60"></ueberschrift>
     <kurzbeschreibung länge-max="150"></kurzbeschreibung>
     <seo>
@@ -227,28 +182,33 @@
     </seo>
   </editorial-metadata>
   <vorschau>
-    <text>Finale redaktionelle Online-Ausgabe
-
-Überschrift (max. 60 Zeichen):
-
-Kurzbeschreibung (max. 150 Zeichen):
-
-SEO-Keywords (max. 10):
-
-SEO-Themen (max. 5):
-</text>
+    <text>
+      === Redaktionelle Vorschau ===
+      ÜBERSCHRIFT:
+      KURZTEXT:
+      KEYWORDS:
+      THEMEN:
+    </text>
+    <html>
+      <box>
+        <h2>[Überschrift]</h2>
+        <p>[Kurzbeschreibung]</p>
+        <ul class="keywords"><li>...</li></ul>
+        <ul class="themen"><li>...</li></ul>
+      </box>
+    </html>
   </vorschau>
 </online-ausgabe>`;
 
-      document.getElementById("finalXml").value = xml;
+      document.getElementById("finalXml").textContent = xml;
     }
 
     function copyToClipboard() {
-      navigator.clipboard.writeText(document.getElementById("finalXml").value);
+      navigator.clipboard.writeText(document.getElementById("finalXml").textContent);
     }
 
     function downloadXML() {
-      const blob = new Blob([document.getElementById("finalXml").value], { type: "application/xml" });
+      const blob = new Blob([document.getElementById("finalXml").textContent], { type: "application/xml" });
       const url = URL.createObjectURL(blob);
       const a = document.createElement("a");
       a.href = url;
