--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8" />
-  <title>Analyse-Tool mit KI-PromptChain002</title>
+  <title>Analyse-Tool mit KI-PromptChain</title>
   <style>
     body { font-family: Arial, sans-serif; max-width: 960px; margin: auto; padding: 20px; }
     textarea, select, input[type="text"] {
@@ -16,7 +16,7 @@
   </style>
 </head>
 <body>
-  <h1>Analyse-Tool – XML mit PromptChain</h1>
+  <h1>Analyse-Tool – XML mit PromptChain002</h1>
 
   <label for="beitragstitel">Beitragstitel:</label>
   <input type="text" id="beitragstitel" placeholder="Beitragstitel eingeben" />
