--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </style>
 </head>
 <body>
-  <h1>Analyse-Tool – XML mit PromptChain002</h1>
+  <h1>Analyse-Tool – XML mit PromptChain</h1>
 
   <label for="beitragstitel">Beitragstitel:</label>
   <input type="text" id="beitragstitel" placeholder="Beitragstitel eingeben" />
